{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 32,
  "lineage": "8e6bc3a5-9236-314b-8f51-2e9c037416e6",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_elip",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01adb1318afd2b3a7",
            "domain": "vpc",
            "id": "eipalloc-01adb1318afd2b3a7",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-108-128-241-12.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.128.241.12",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_elip2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03797d141dfd0aad7",
            "domain": "vpc",
            "id": "eipalloc-03797d141dfd0aad7",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-18-200-68-95.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.200.68.95",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw_01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:internet-gateway/igw-020a64eabdf5cf468",
            "id": "igw-020a64eabdf5cf468",
            "owner_id": "411194033911",
            "tags": {
              "name": "my-igw-01"
            },
            "tags_all": {
              "name": "my-igw-01"
            },
            "vpc_id": "vpc-0d0f8ced2684009ae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_load_balancer",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:loadbalancer/app/my-load-balancer/74403a4c9b205ca4",
            "arn_suffix": "app/my-load-balancer/74403a4c9b205ca4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-load-balancer-1223332511.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:loadbalancer/app/my-load-balancer/74403a4c9b205ca4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f5bb1696c2ff517a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0776ebcef7461dc4b"
              },
              {
                "subnet_id": "subnet-090055630de21d46a"
              }
            ],
            "subnets": [
              "subnet-0776ebcef7461dc4b",
              "subnet-090055630de21d46a"
            ],
            "tags": {
              "Name": "load-balancer"
            },
            "tags_all": {
              "Name": "load-balancer"
            },
            "vpc_id": "vpc-0d0f8ced2684009ae",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.vpc.aws_security_group.allow_http",
            "module.vpc.aws_subnet.my_public_subnet_01",
            "module.vpc.aws_subnet.my_public_subnet_02",
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_alb_listener",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:listener/app/my-load-balancer/74403a4c9b205ca4/391c7b4c0c95a440",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:targetgroup/my-alb-target-group/b9cc7f549fad1d76",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:listener/app/my-load-balancer/74403a4c9b205ca4/391c7b4c0c95a440",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:loadbalancer/app/my-load-balancer/74403a4c9b205ca4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "listener"
            },
            "tags_all": {
              "Name": "listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_lb.my_load_balancer",
            "module.vpc.aws_lb_target_group.my_alb_target_group",
            "module.vpc.aws_security_group.allow_http",
            "module.vpc.aws_subnet.my_public_subnet_01",
            "module.vpc.aws_subnet.my_public_subnet_02",
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_alb_target_group",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:targetgroup/my-alb-target-group/b9cc7f549fad1d76",
            "arn_suffix": "targetgroup/my-alb-target-group/b9cc7f549fad1d76",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:targetgroup/my-alb-target-group/b9cc7f549fad1d76",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d0f8ced2684009ae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01adb1318afd2b3a7",
            "association_id": "eipassoc-02e551424f52b277c",
            "connectivity_type": "public",
            "id": "nat-0e02986b432fc570a",
            "network_interface_id": "eni-0264ce8ed91bbae0f",
            "private_ip": "10.0.1.201",
            "public_ip": "108.128.241.12",
            "subnet_id": "subnet-090055630de21d46a",
            "tags": {
              "Name": "my-nat-01"
            },
            "tags_all": {
              "Name": "my-nat-01"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.terraform_elip",
            "module.vpc.aws_subnet.my_public_subnet_01",
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03797d141dfd0aad7",
            "association_id": "eipassoc-0dff30dae0aac2cad",
            "connectivity_type": "public",
            "id": "nat-03fcc36e116b9cf56",
            "network_interface_id": "eni-0f83a549b3eba8420",
            "private_ip": "10.0.2.145",
            "public_ip": "18.200.68.95",
            "subnet_id": "subnet-0776ebcef7461dc4b",
            "tags": {
              "Name": "my-nat-02"
            },
            "tags_all": {
              "Name": "my-nat-02"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.terraform_elip2",
            "module.vpc.aws_subnet.my_public_subnet_02",
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table_01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:route-table/rtb-0598ef0551caf41e4",
            "id": "rtb-0598ef0551caf41e4",
            "owner_id": "411194033911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020a64eabdf5cf468",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d0f8ced2684009ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw_01",
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table_02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:route-table/rtb-0ec886debe1f54f82",
            "id": "rtb-0ec886debe1f54f82",
            "owner_id": "411194033911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e02986b432fc570a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d0f8ced2684009ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.terraform_elip",
            "module.vpc.aws_nat_gateway.my_nat_01",
            "module.vpc.aws_subnet.my_public_subnet_01",
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table_03",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:route-table/rtb-0cec10f2303392fac",
            "id": "rtb-0cec10f2303392fac",
            "owner_id": "411194033911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020a64eabdf5cf468",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d0f8ced2684009ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw_01",
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table_04",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:route-table/rtb-01f207d5fa2ffd1b9",
            "id": "rtb-01f207d5fa2ffd1b9",
            "owner_id": "411194033911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03fcc36e116b9cf56",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d0f8ced2684009ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.terraform_elip2",
            "module.vpc.aws_nat_gateway.my_nat_02",
            "module.vpc.aws_subnet.my_public_subnet_02",
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_subnet_assoc_01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f052248d62f8dca0",
            "route_table_id": "rtb-0598ef0551caf41e4",
            "subnet_id": "subnet-090055630de21d46a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw_01",
            "module.vpc.aws_route_table.my_route_table_01",
            "module.vpc.aws_subnet.my_public_subnet_01",
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_subnet_assoc_02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090df40edce786184",
            "route_table_id": "rtb-0ec886debe1f54f82",
            "subnet_id": "subnet-0295075ddc09e5be4"
          },
          "dependencies": [
            "module.vpc.aws_eip.terraform_elip",
            "module.vpc.aws_nat_gateway.my_nat_01",
            "module.vpc.aws_route_table.my_route_table_02",
            "module.vpc.aws_subnet.my_private_subnet_01",
            "module.vpc.aws_subnet.my_public_subnet_01",
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_subnet_assoc_03",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034241e293554aec0",
            "route_table_id": "rtb-0cec10f2303392fac",
            "subnet_id": "subnet-0776ebcef7461dc4b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw_01",
            "module.vpc.aws_route_table.my_route_table_03",
            "module.vpc.aws_subnet.my_public_subnet_02",
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_subnet_assoc_04",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032b2dcf2335a9c80",
            "route_table_id": "rtb-01f207d5fa2ffd1b9",
            "subnet_id": "subnet-09ea466ec15a02268"
          },
          "dependencies": [
            "module.vpc.aws_eip.terraform_elip2",
            "module.vpc.aws_nat_gateway.my_nat_02",
            "module.vpc.aws_route_table.my_route_table_04",
            "module.vpc.aws_subnet.my_private_subnet_02",
            "module.vpc.aws_subnet.my_public_subnet_02",
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:security-group/sg-0f5bb1696c2ff517a",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5bb1696c2ff517a",
            "ingress": [
              {
                "cidr_blocks": [
                  "91.211.97.132/32"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http",
            "name_prefix": "",
            "owner_id": "411194033911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-http"
            },
            "tags_all": {
              "Name": "allow-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0f8ced2684009ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_sec1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:security-group/sg-0ac08c130c2ffc1fe",
            "description": "Allow HTTP inbound traffic to load",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac08c130c2ffc1fe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic from http_sec_group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f5bb1696c2ff517a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-sec1",
            "name_prefix": "",
            "owner_id": "411194033911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-sec1"
            },
            "tags_all": {
              "Name": "allow-sec1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0f8ced2684009ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.allow_http",
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet_01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-0295075ddc09e5be4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0295075ddc09e5be4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-private01"
            },
            "tags_all": {
              "Name": "private-private01"
            },
            "vpc_id": "vpc-0d0f8ced2684009ae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet_02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-09ea466ec15a02268",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ea466ec15a02268",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-private02"
            },
            "tags_all": {
              "Name": "private-private02"
            },
            "vpc_id": "vpc-0d0f8ced2684009ae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet_01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-090055630de21d46a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090055630de21d46a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet01"
            },
            "tags_all": {
              "Name": "public-subnet01"
            },
            "vpc_id": "vpc-0d0f8ced2684009ae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet_02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-0776ebcef7461dc4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0776ebcef7461dc4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet02"
            },
            "tags_all": {
              "Name": "public-subnet02"
            },
            "vpc_id": "vpc-0d0f8ced2684009ae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc_01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:vpc/vpc-0d0f8ced2684009ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08e9f07132d0a513a",
            "default_route_table_id": "rtb-059317a3d4c8b4d16",
            "default_security_group_id": "sg-0c7e15ea475b51766",
            "dhcp_options_id": "dopt-0a1b2f3f6a4cd231f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0f8ced2684009ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059317a3d4c8b4d16",
            "owner_id": "411194033911",
            "tags": {
              "Name": "my-exam-vpc"
            },
            "tags_all": {
              "Name": "my-exam-vpc"
            }
          }
        }
      ]
    }
  ]
}